# TMGA

TMGA/: README.md
TMGA-BC/: README.md  ~$GA-TCC-2021-05-0196.R2.docx  ~$GA-TCC-2021-05-0196.R2_ForSmall.docx  ~$ms.docx  ~WRL0990.tmp
TMGA-BC/Result/: CompareResult_ng-1000.xlsx  ExampleResult_ng-1000.xlsx  OrthogonalResult-1000-Final.xlsx
TMGA-BC/Result_HD/: (0.2,0.2).xlsx  (0.2,0.5).xlsx  (0.2,0.8).xlsx  (0.5,0.2).xlsx  (0.5,0.5).xlsx  (0.5,0.8).xlsx  (0.8,0.2).xlsx  (0.8,0.5).xlsx  (0.8,0.8).xlsx  HDCEs.xlsx
TMGA-BC/TMGA-BC-Compare-st/: CGA.cpp  CGA.h  HGA.cpp  LWSGA.cpp  LWSGA.h  NGA.cpp  TMGA.h  main.cpp
TMGA-BC/TMGA_BC-Compare-ms/: CMakeLists.txt  HGA.cpp  IHEFT3.cpp  IHEFT3.h  LWSGA.cpp  LWSGA.h  fileList.txt  main.cpp
TMGA-BC/TMGA_BC-Compare-ms/lib/: CMakeLists.txt  GenOperator.cpp  GenerateAChrom.cpp  classAndVarDefine.cpp  config.cpp  tools.cpp
TMGA-BC/TMGA_BC-Example/: CGA.cpp  CMakeLists.txt  Exhaustive.h  IHEFT3.cpp  IHEFT3.h  LWSGA.cpp  NGA.cpp  NGA.h  TMGA.cpp  fileList_back.txt  fileList_back.txt.bak  main.cpp  result.txt
TMGA-BC/TMGA_BC-Example/lib/: CMakeLists.txt  GenOperator.cpp  GenerateAChrom.cpp  config.cpp
TMGA-BC/TMGA_BC-Orthogonal/: CMakeLists.txt  TMGA.cpp  TMGA.h  exp.txt  flieList_back.txt  main.cpp
TMGA-BC/TMGA_BC-Orthogonal/data/: 1000_0.7_0.txt  1000_1.0_0.txt  25_0.4_0.txt  997_0.4_0.txt  997_0.7_0.txt
TMGA-BC/TMGA_BC-Orthogonal/include/: GenOperator.h  GenerateAChrom.h  config.h
TMGA-BC/TMGA_BC-Orthogonal/lib/: CMakeLists.txt  GenOperator.cpp  GenerateAChrom.cpp  classAndVarDefine.cpp  config.cpp
TMGA-BC/TMGA_BC-Orthogonal/print/: result1.txt  result2.txt  result3.txt  result4.txt  result5.txt
TMGA-BC/TMGA_BC-time/: CGA.cpp  CGA.h  CMakeLists.txt  HGA.cpp  HGA.h  LWSGA.cpp  NGA.cpp  NGA.h  fileList_back_1000.txt  flieList_back_100.txt  main.cpp  result.txt  run.sh
TMGA-BC/TMGA_BC-time/data/: 100_1.0_0.txt  25_0.7_0.txt
TMGA-BC/TMGA_BC-time/include/: GenOperator.h  GenerateAChrom.h  classAndVarDefine.h  common.h
TMGA-BC/TMGA_BC-time/lib/: CMakeLists.txt  GenOperator.cpp  GenerateAChrom.cpp  config.cpp
TMGA/Result/: CompareResult_ng -new.xlsx  CompareResult_ng-new.xlsx  ExampleResult_ng-new.xlsx  OrthogonalResult-new.xlsx
TMGA/exp_Compare_ms/: CGA.cpp  CMakeLists.txt  HEFT.cpp  HEFT.h  HGA.cpp  IHEFT3.cpp  IHEFT3.h  (+4 more)
TMGA/exp_Compare_st/: CMakeLists.txt  HGA.h  TMGA.cpp  fileList.txt  flieList_back.txt.bak  main.cpp
TMGA/exp_Compare_st/data/: 25_1.0_0.txt
TMGA/exp_Compare_st/include/: GenerateAChrom.h  classAndVarDefine.h
TMGA/exp_Compare_st/lib/: GenerateAChrom.cpp  tools.cpp
(+69 files in other folders)
