add_library(GenOperator GenOperator.cpp classAndVarDefine.cpp config.cpp GenerateAChrom.cpp ../HEFT.cpp ../HEFT.h ../IHEFT3.cpp ../IHEFT3.h)
add_library(tools tools.cpp ../HEFT.cpp ../HEFT.h ../IHEFT3.cpp ../IHEFT3.h)
add_library(pugixml pugixml.cpp ../HEFT.cpp ../HEFT.h ../IHEFT3.cpp ../IHEFT3.h)
add_library(classAndVarDefine classAndVarDefine.cpp ../HEFT.cpp ../HEFT.h ../IHEFT3.cpp ../IHEFT3.h)
add_library(config config.cpp ../HEFT.cpp ../HEFT.h ../IHEFT3.cpp ../IHEFT3.h)